Fix Edge Function Network Permissions

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,7 @@
 project_id = "tztpqynhluetmatvnrvl"
+
+[[functions.ai4bharat-translate]]
+net = ["api.ai4bharat.org", "indictrans2-api.ai4bharat.org"]
+
+[[functions.ai4bharat-transliterate]]
+net = ["api.ai4bharat.org", "indictrans2-api.ai4bharat.org"]
